# smoothie-o-matic-5000

./: README.md  blenderControl copy.py  blenderControl.py
backend-blender-control/: pyproject.toml
website/smoothie-o-matic-5000/: index.html  package.json
website/smoothie-o-matic-5000/src/: App.css  App.tsx
website/smoothie-o-matic-5000/src/common/: header.tsx  option.tsx
