[tool.poetry]
name = "backend-blender-control"
version = "0.1.0"
description = ""
authors = ["Alice Gowler <psyag8@exmail.nottingham.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
rpi-gpio = "^0.7.1"
adafruit-circuitpython-servokit = "^1.3.18"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
